<resources>
    <string name="app_name">Test</string>
    <string name="todo"/>
    <string name="login"/>
    <string name="darshana"/>
    <string name="achi">Darshana</string>
    <string name="log_in"/>
    <string name="loginn">Login</string>
    <string name="darshana2">Darshana</string>
    <string name="todo2">TODO</string>
    <string name="username">Username</string>
    <string name="todo3">TODO</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="darshana3">Darshana</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="username2">USERNAME</string>
    <string name="name">Name</string>
    <string name="username3">USERNAME</string>
    <string name="username5">USERNAME</string>
    <string name="password2">PASSWORD</string>
    <string name="login4">LOGIN</string>
</resources>
