<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/background">



    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView2"
            android:contentDescription="@string/todo" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginTop="76dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/achi"
            android:layout_width="94dp"
            android:layout_height="41dp"
            android:id="@+id/textView2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textStyle="bold" android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/loginn"
            android:layout_width="409dp"
            android:layout_height="68dp"
            android:id="@+id/btnlog" app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent" android:backgroundTint="#EE082FB4"
            android:textColor="#ECE4E4"/>


</androidx.constraintlayout.widget.ConstraintLayout>