<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@drawable/background">

    <ImageView
            android:layout_width="78dp"
            android:layout_height="81dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageView4" android:layout_marginTop="76dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.47" android:contentDescription="@string/todo4"/>
    <TextView
            android:text="@string/darshana3"
            android:layout_width="116dp"
            android:layout_height="40dp"
            android:id="@+id/textView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.534" android:textStyle="bold"
            android:textColor="#0C0C0C" android:textSize="20sp"/>
    <ImageView
            android:layout_width="411dp"
            android:layout_height="377dp" app:srcCompat="@android:color/holo_blue_light"
            android:id="@+id/imageView5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/todo5"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.533"/>
</androidx.constraintlayout.widget.ConstraintLayout>